--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+main {
+  max-width: 800px;
+  margin: 3em auto 0;
+}
+
+h2, h4 {
+  text-align: center;
+  margin: 2em 0;
+}
+
+section {
+  margin-top: 3em;
+}
+
+.cardContainer {
+  margin: 0;
+  width: 2em auto 0;
+}
+
+.card {
+  box-sizing: border-box;
+  margin: 1.6em auto;
+  width: 100%;
+  padding: 1em 2em;
+  border-radius: 1em;
+
+  max-width: 700px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  background-color: #FAFAFA;
+  box-shadow: 1px 1px 20px 1px rgba(0,0,0,0.15);
+
+}
+
+.card > h2 {
+  font-size: 3.2em;
+  margin: 0;
+}
+
+.card > .card-details {
+  text-align: right;
 }
